--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
+    "mongoose": "^6.4.6",
     "moongoose": "^0.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
